// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventElection Not started election renders correctly for an attendee 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <RCTScrollView
    data={
      Array [
        Object {
          "data": Array [
            "Ballot Option 1",
            "Ballot Option 2",
          ],
          "title": "Mock Question 1",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={
      Array [
        0,
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <Text
          style={
            Object {
              "fontSize": 20,
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          Mock Question 1
        </Text>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginHorizontal": 20,
              "textAlign": "center",
            }
          }
        >
          • Ballot Option 1
        </Text>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginHorizontal": 20,
              "textAlign": "center",
            }
          }
        >
          • Ballot Option 2
        </Text>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>,
]
`;

exports[`EventElection Not started election renders correctly for an organizer 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <RCTScrollView
    data={
      Array [
        Object {
          "data": Array [
            "Ballot Option 1",
            "Ballot Option 2",
          ],
          "title": "Mock Question 1",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={
      Array [
        0,
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <Text
          style={
            Object {
              "fontSize": 20,
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          Mock Question 1
        </Text>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginHorizontal": 20,
              "textAlign": "center",
            }
          }
        >
          • Ballot Option 1
        </Text>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <Text
          style={
            Object {
              "fontSize": 16,
              "marginHorizontal": 20,
              "textAlign": "center",
            }
          }
        >
          • Ballot Option 2
        </Text>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>,
]
`;

exports[`EventElection Running election renders correctly for an attendee 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "zIndex": 3,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
          "marginHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Mock Question 1
    </Text>
    <View
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "zIndex": 3,
        }
      }
    >
      <View
        accessibilityRole="checkbox"
        accessibilityState={
          Object {
            "checked": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#fafafa",
            "borderColor": "#ededed",
            "borderRadius": 3,
            "borderWidth": 1,
            "margin": 5,
            "marginLeft": 10,
            "marginRight": 10,
            "opacity": 1,
            "padding": 10,
          }
        }
        testID="checkBoxBallot Option 1"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#bfbfbf",
                  "fontSize": 24,
                },
                Object {
                  "minWidth": 24,
                },
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              Object {
                "color": "#43484d",
                "fontWeight": "bold",
                "marginLeft": 10,
                "marginRight": 10,
              }
            }
            testID="checkboxTitle"
          >
            Ballot Option 1
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="checkbox"
        accessibilityState={
          Object {
            "checked": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#fafafa",
            "borderColor": "#ededed",
            "borderRadius": 3,
            "borderWidth": 1,
            "margin": 5,
            "marginLeft": 10,
            "marginRight": 10,
            "opacity": 1,
            "padding": 10,
          }
        }
        testID="checkBoxBallot Option 2"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#bfbfbf",
                  "fontSize": 24,
                },
                Object {
                  "minWidth": 24,
                },
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              Object {
                "color": "#43484d",
                "fontWeight": "bold",
                "marginLeft": 10,
                "marginRight": 10,
              }
            }
            testID="checkboxTitle"
          >
            Ballot Option 2
          </Text>
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Object {
        "marginHorizontal": 50,
        "marginVertical": 10,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          disabled={false}
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Cast Vote
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#52c41a",
          "borderColor": "#fff",
          "borderRadius": 9,
          "borderWidth": 0.5,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 12,
            "paddingHorizontal": 4,
          }
        }
      >
        0
      </Text>
    </View>
  </View>,
]
`;

exports[`EventElection Running election renders correctly for an organizer 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "zIndex": 3,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 25,
          "marginHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Mock Question 1
    </Text>
    <View
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "zIndex": 3,
        }
      }
    >
      <View
        accessibilityRole="checkbox"
        accessibilityState={
          Object {
            "checked": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#fafafa",
            "borderColor": "#ededed",
            "borderRadius": 3,
            "borderWidth": 1,
            "margin": 5,
            "marginLeft": 10,
            "marginRight": 10,
            "opacity": 1,
            "padding": 10,
          }
        }
        testID="checkBoxBallot Option 1"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text />
          <Text
            style={
              Object {
                "color": "#43484d",
                "fontWeight": "bold",
                "marginLeft": 10,
                "marginRight": 10,
              }
            }
            testID="checkboxTitle"
          >
            Ballot Option 1
          </Text>
        </View>
      </View>
      <View
        accessibilityRole="checkbox"
        accessibilityState={
          Object {
            "checked": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#fafafa",
            "borderColor": "#ededed",
            "borderRadius": 3,
            "borderWidth": 1,
            "margin": 5,
            "marginLeft": 10,
            "marginRight": 10,
            "opacity": 1,
            "padding": 10,
          }
        }
        testID="checkBoxBallot Option 2"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text />
          <Text
            style={
              Object {
                "color": "#43484d",
                "fontWeight": "bold",
                "marginLeft": 10,
                "marginRight": 10,
              }
            }
            testID="checkboxTitle"
          >
            Ballot Option 2
          </Text>
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Object {
        "marginHorizontal": 50,
        "marginVertical": 10,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          disabled={false}
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Cast Vote
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#52c41a",
          "borderColor": "#fff",
          "borderRadius": 9,
          "borderWidth": 0.5,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 12,
            "paddingHorizontal": 4,
          }
        }
      >
        0
      </Text>
    </View>
  </View>,
  <View
    style={
      Object {
        "marginHorizontal": 50,
        "marginVertical": 10,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          disabled={false}
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Terminate Election / Tally Votes
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`EventElection Terminated election where the results are available renders correctly for an attendee 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Election Terminated
  </Text>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Waiting for result
  </Text>,
]
`;

exports[`EventElection Terminated election where the results are available renders correctly for an organizer 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Election Terminated
  </Text>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Waiting for result
  </Text>,
]
`;

exports[`EventElection Terminated election where the results are not yet available renders correctly for an attendee 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Election Terminated
  </Text>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Waiting for result
  </Text>,
]
`;

exports[`EventElection Terminated election where the results are not yet available renders correctly for an organizer 1`] = `
Array [
  <View>
    <Text
      style={
        Object {
          "marginHorizontal": 10,
        }
      }
    >
      Start: 
      <time
        dateTime="2020-12-31T23:00:00.000Z"
        title="2020-12-31 23:00"
      >
        1 year ago
      </time>
      

      End: 
      <time
        dateTime="2021-01-01T23:00:00.000Z"
        title="2021-01-01 23:00"
      >
        1 year ago
      </time>
    </Text>
  </View>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Election Terminated
  </Text>,
  <Text
    style={
      Object {
        "fontSize": 25,
        "marginHorizontal": 10,
        "textAlign": "center",
      }
    }
  >
    Waiting for result
  </Text>,
]
`;
